<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.7</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.dance.street</groupId>
	<artifactId>game</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>dance-game</name>
	<description>dance game service</description>
	<properties>
		<java.version>21</java.version>
		<!-- Docker/GitHub Actions 里前端 dist 已预构建,跳过 npm 步骤 -->
		<skipFrontendBuild>false</skipFrontendBuild>
		<mybatis-plus.version>3.5.16</mybatis-plus.version>
		<satoken.version>1.45.0</satoken.version>
		<redisson.version>4.7.0</redisson.version>
		<hutool.version>5.8.40</hutool.version>
		<!-- xlsx 读写:纯 StAX 实现,无反射/无运行期类生成,可在 GraalVM native 下零 hint 工作。
		     写(fastexcel)与读(fastexcel-reader)是分开的两个 artifact。
		     不用 cn.idev.excel(EasyExcel 系):它用 cglib 生成 BeanMap,而 native 不支持运行期类定义。 -->
		<fastexcel.version>0.19.0</fastexcel.version>
		<mapstruct-plus.version>1.5.0</mapstruct-plus.version>
		<mapstruct-plus.lombok.version>0.2.0</mapstruct-plus.lombok.version>
		<lombok.version>1.18.40</lombok.version>
		<!-- native-image 优化级别:s=按体积优化(256MB 小内存容器默认,代码区更小);
		     发布大机器可 -Dnative.optimize=2 换回性能;本地迭代可 -Dnative.optimize=b 加快编译 -->
		<native.optimize>s</native.optimize>
		<!-- 小内存部署:限制 native 运行期堆上限,默认 96MB(配合 -Os 使 256MB 容器内
		     总 RSS 稳定在 ~200-230MB);内存更充裕可 -Dnative.maxHeapSize=192m 等覆盖 -->
		<native.maxHeapSize>96m</native.maxHeapSize>
		<!-- 活动处理器数:限制线程池/Netty 等按 CPU 数扩池,减少 native 内存(线程栈、缓冲);
		     容器核数更高时可 -Dnative.activeProcessors=4 覆盖,0 表示跟随系统 -->
		<native.activeProcessors>2</native.activeProcessors>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aspectj</artifactId>
		</dependency>

		<!-- MyBatis-Plus (Spring Boot 4) -->
		<dependency>
			<groupId>com.baomidou</groupId>
			<artifactId>mybatis-plus-spring-boot4-starter</artifactId>
			<version>${mybatis-plus.version}</version>
		</dependency>
		<dependency>
			<groupId>com.baomidou</groupId>
			<artifactId>mybatis-plus-jsqlparser</artifactId>
			<version>${mybatis-plus.version}</version>
		</dependency>

		<!-- Sa-Token 单账号登录 -->
		<dependency>
			<groupId>cn.dev33</groupId>
			<artifactId>sa-token-spring-boot4-starter</artifactId>
			<version>${satoken.version}</version>
		</dependency>
		<!-- Sa-Token JWT:无状态登录,token 自带有效期,不依赖服务端存储 -->
		<dependency>
			<groupId>cn.dev33</groupId>
			<artifactId>sa-token-jwt</artifactId>
			<version>${satoken.version}</version>
		</dependency>

		<!-- Redisson (分布式 SSE 依赖 Redis 发布订阅) -->
		<dependency>
			<groupId>org.redisson</groupId>
			<artifactId>redisson-spring-boot-starter</artifactId>
			<version>${redisson.version}</version>
		</dependency>

		<dependency>
			<groupId>cn.hutool</groupId>
			<artifactId>hutool-all</artifactId>
			<version>${hutool.version}</version>
		</dependency>

		<!-- xlsx 写出(纯 StAX) -->
		<dependency>
			<groupId>org.dhatim</groupId>
			<artifactId>fastexcel</artifactId>
			<version>${fastexcel.version}</version>
		</dependency>
		<!-- xlsx 读取 -->
		<dependency>
			<groupId>org.dhatim</groupId>
			<artifactId>fastexcel-reader</artifactId>
			<version>${fastexcel.version}</version>
		</dependency>

		<!-- mapstruct-plus: VO/BO/Entity 转换 -->
		<dependency>
			<groupId>io.github.linpeilie</groupId>
			<artifactId>mapstruct-plus-spring-boot-starter</artifactId>
			<version>${mapstruct-plus.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<!-- SQLite(可选):设置 DB_URL=jdbc:sqlite:... 时使用,默认仍为 MySQL -->
		<dependency>
			<groupId>org.xerial</groupId>
			<artifactId>sqlite-jdbc</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- 打包时自动编译前端并拷贝到 static -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.5.0</version>
				<executions>
					<execution>
						<id>npm-install</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>npm</executable>
							<skip>${skipFrontendBuild}</skip>
							<workingDirectory>${project.basedir}/frontend</workingDirectory>
							<arguments>
								<argument>install</argument>
								<argument>--prefer-offline</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>frontend-build</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>npm</executable>
							<skip>${skipFrontendBuild}</skip>
							<workingDirectory>${project.basedir}/frontend</workingDirectory>
							<arguments>
								<argument>run</argument>
								<argument>build:prod</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<executions>
					<execution>
						<!-- 将 sql/game_db.sql 打进 jar(classpath:sql/game_db.sql),供启动时 JDBC 兜底建表 -->
						<id>copy-sql-script</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}/sql</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/sql</directory>
									<includes>
										<include>game_db.sql</include>
										<include>game_db.sqlite.sql</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-frontend-dist</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
							<resources>
								<resource>
									<directory>${project.basedir}/frontend/dist</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>UTF-8</encoding>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>io.github.linpeilie</groupId>
							<artifactId>mapstruct-plus-processor</artifactId>
							<version>${mapstruct-plus.version}</version>
						</path>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>${mapstruct-plus.lombok.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!--
		GraalVM Native Image 构建 profile:
		mvn -Pnative package
		前提: 使用 GraalVM JDK 运行 Maven(本地 JAVA_HOME 指向 GraalVM, 或 CI 用 setup-graalvm)
		spring-boot-starter-parent 的 native profile 已负责 process-aot 与 reachability metadata,
		这里只需绑定 native-maven-plugin 的 compile-no-fork 到 package 阶段。

		运行期默认值: 未设置 DEPLOY_MODE 时, native 可执行文件默认 standalone
		(SQLite + 进程内 SSE, 不连 MySQL/Redis); JAR 仍默认 auto(探测失败自动降级)。
		由 DeployModeResolver 按 org.graalvm.nativeimage.imagecode 区分, 见 README「先选部署模式」。
	-->
	<profiles>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<configuration>
							<buildArgs>
								<buildArg>-O${native.optimize}</buildArg>
								<buildArg>-R:MaxHeapSize=${native.maxHeapSize}</buildArg>
								<buildArg>-R:ActiveProcessorCount=${native.activeProcessors}</buildArg>
							</buildArgs>
						</configuration>
						<executions>
							<execution>
								<id>build-native</id>
								<goals>
									<goal>compile-no-fork</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
					</plugin>
					<!--
						AOT 阶段也按 standalone 处理。
						原因:spring.autoconfigure.exclude 是「构建期」生效的——AOT 会把当时
						匹配上的自动装配固化成 bean 定义,native 运行期再设这个属性已经无效。
						若不在这里声明 standalone,镜像里会烙进 Redisson 自动装配,导致
						「本应零配置单机启动」的 native 产物在 Redis 不可达时直接启动失败
						(CI 无内网 Redis,正是这种情形)。
					-->
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<arguments>
								<argument>--app.deploy-mode=standalone</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
